--- a/apps/minikube/kustomization.yaml
+++ b/apps/minikube/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 helmCharts:
 - name: kube-prometheus-stack
-  version: v0.85.0
+  version: 77.10.0
   repo: https://prometheus-community.github.io/helm-charts
   releaseName: prometheus
   namespace: prometheus
