--- a/apps/prometheus/rules.yaml
+++ b/apps/prometheus/rules.yaml
@@ -4,7 +4,12 @@ metadata:
   name: custom-alerts
   namespace: prometheus 
   labels:
-    release: prometheus #This label is important for prometheus operator to discover the rules; This is mandatory
+    app.kubernetes.io/instance: prometheus
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/part-of: kube-prometheus-stack
+    app: kube-prometheus-stack
+    heritage: Helm
+    release: prometheus 
 spec:
   groups:
     - name: KubestateExporter
